2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed modifier handling to always update internal state (and not just when
  gecko handled the event).

2007-12-08	Frank Richter	<frank.richter@gmail.com>

* Changed embedding object creation to take a (hidden) "API version" parameter
  which is used to make sure the used library matches the used header.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Fixed space key to be sent as a character to gecko.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Emit 'key press' events to gecko only on received key down events, not key
  up events as well.

2007-12-07	Frank Richter	<frank.richter@gmail.com>

* Change typing scheme so "object types" are not aliases to the base object
  types, but distinct types. This allows type checking by the compiler.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Some dirty region handling tweaks.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* SDK tweaks: added note on message pumping; include ChangeLog.txt.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Made the update logic smarter by actually utilizing the "dirty" regions
  passed in by Gecko.

2007-11-28	Frank Richter	<frank.richter@gmail.com>

* Fixed some non-C code: enums (spotted by Andreas Kirsch) and an inline in
  gecko_mem.h.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added convenience function to register a global JavaScript object for
  scripting.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a wrapper for the Gecko component manager (the idea is to make common
  component manager/registrar tasks more convenient) as well as getters for
  the actual Gecko component manager, component registrar and service manager.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a wrapper object to allow access to Gecko memory allocation without
  having to necessarily link against XPCOM.

2007-11-25	Frank Richter	<frank.richter@gmail.com>
