@@ -1,5 +1,9 @@
 2007-12-08	Frank Richter	<frank.richter@gmail.com>
 
+* Fixed scrolling, painting and modifier issues.
+
+2007-12-08	Frank Richter	<frank.richter@gmail.com>
+
 * Changed modifier handling to always update internal state (and not just when
   gecko handled the event).
 
